# Gung

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
client/: Cargo.toml
components/auth/: Cargo.toml
components/auth/src/: lib.rs  msg.rs
components/auth/src/impls/: mod.rs  pass.rs  py_plugin.rs
components/transport/: Cargo.toml
pylib/: Cargo.toml  pyproject.toml
pylib/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/config/: mod.rs  run.rs
