[workspace]
members = ["server", "client", "components/*", "pylib"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Poseidon <18646154381@163.com>"]
license = "MIT"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9.5"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
pyo3 = { version = "0.26.0", features = [
    "auto-initialize",
    "extension-module",
] }
