[package]
name = "auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
pyo3 = { workspace = true }
pythonize = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
semver = { workspace = true }
uuid = { workspace = true }
